--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 		<title>Chemistry Rocks!</title>
 	</head>
 	<body>
+	<h1>Chemistry!</h1>
+	<h2>Section1</h2>
+	<p>Explain Chemistry...</p>
 	</body>
 </html>
