--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Chemistry Rocks!</title>
 	</head>
 	<body>
-	<h1>Chemistry!</h1>
-	<h2>Section1</h2>
-	<p>Explain Chemistry...</p>
+		<div id="page">
+			<div id="header">
+				<div id="nav">
+					<ul>
+						
+					</ul>
+				</div>
+			</div>
+			<div id="content">
+				<div id="article">
+				</div>
+				<div id="article">
+				</div>
+			</div>
+			<div id="sidebar">
+			</div>
+			<div id="footer">
+			</div>
+		</div>
 	</body>
 </html>
