--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<div id="header">
 				<div id="nav">
 					<ul>
-						
+					<li><a>Section 1: A Brief History of Chemistry</a></li>	
 					</ul>
 				</div>
 			</div>
