--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Chemistry Rocks!</title>
+		<title>Chemistry in Art Restoration!</title>
 	</head>
 	<body>
 		<div id="page">
 			<div id="header">
 				<div id="nav">
 					<ul>
-					<li><a>Section 1: A Brief History of Chemistry</a></li>	
+					<li><a>Section 1: </a></li>	
 					</ul>
 				</div>
 			</div>
