--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 	<head>
 		<title>Chemistry in Art Restoration!</title>
@@ -7,16 +6,38 @@
 		<div id="page">
 			<div id="header">
 				<div id="nav">
-					<ul>
-					<li><a>Section 1: </a></li>	
-					</ul>
+                                    <table>
+                                        <thead>
+                                        <th colspan ="5">Sections</th>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                        <a href="#Section1"><td>Section 1</td></a>
+                                        <a href="#Section2"><td>Section 2</td></a>
+                                        <a href="#Section3"><td>Section 3</td></a>
+                                        <a href="#Section4"><td>Section 4</td></a>
+                                        <a href="#Section5"><td>Section 5</td></a>
+                                            </tr>
+                                        </tbody>
+                                    </table>
 				</div>
 			</div>
 			<div id="content">
-				<div id="article">
-				</div>
-				<div id="article">
-				</div>
+                            <a name="Section1"><div id="Section 1">
+                                    <p id="Area 1">Lorem ipsum.</p>     
+                            </div></a>
+                            <div id="Section 2"><a name="Section2">
+                                <p id="Area 2">Lorem ipsum.</p>
+                            </div></a>
+                            <a name="Section3"><div id="Section 3">
+                                <p id="Area 3">Lorem ipsum.</p>
+                            </div></a>
+                            <a name="Section4"><div id="Section 4">
+                                <p id="Area 4">Lorem ipsum.</p>    
+                            </div></a>
+                            <a name="Section5"><div id="Section 5">
+                                <p id="Area 5">Lorem ipsum.</p>    
+                            </div></a>
 			</div>
 			<div id="sidebar">
 			</div>
