--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 			</div>
 			<div id="content">
                             <a name="Section1"><div id="Section 1">
-                                    <p id="Area 1">Lorem ipsum.</p>     
+                                    <p id="Area 1">Lorem ipsum...</p>     
                             </div></a>
                             <div id="Section 2"><a name="Section2">
-                                <p id="Area 2">Lorem ipsum.</p>
+                                <p id="Area 2">Lorem ipsum...</p>
                             </div></a>
                             <a name="Section3"><div id="Section 3">
-                                <p id="Area 3">Lorem ipsum.</p>
+                                <p id="Area 3">Lorem ipsum...</p>
                             </div></a>
                             <a name="Section4"><div id="Section 4">
-                                <p id="Area 4">Lorem ipsum.</p>    
+                                <p id="Area 4">Lorem ipsum...</p>    
                             </div></a>
                             <a name="Section5"><div id="Section 5">
-                                <p id="Area 5">Lorem ipsum.</p>    
+                                <p id="Area 5">Lorem ipsum...</p>    
                             </div></a>
 			</div>
 			<div id="sidebar">
