--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
 <html>
 	<head>
+                <link type="text/css" rel="stylesheet" href="Stylesheet.css"/>
 		<title>Chemistry in Art Restoration!</title>
 	</head>
 	<body>
@@ -12,32 +19,37 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                        <a href="#Section1"><td>Section 1</td></a>
-                                        <a href="#Section2"><td>Section 2</td></a>
-                                        <a href="#Section3"><td>Section 3</td></a>
-                                        <a href="#Section4"><td>Section 4</td></a>
-                                        <a href="#Section5"><td>Section 5</td></a>
+                                        <td><a href="#Section1">Section 1</a></td>
+                                        <td><a href="#Section2">Section 2</a></td>
+                                        <td><a href="#Section3">Section 3</a></td>
+                                        <td><a href="#Section4">Section 4</a></td>
+                                        <td><a href="#Section5">Section 5</a></td>
                                             </tr>
                                         </tbody>
                                     </table>
 				</div>
 			</div>
 			<div id="content">
-                            <a name="Section1"><div id="Section 1">
-                                    <p id="Area 1">Lorem ipsum...</p>     
-                            </div></a>
-                            <div id="Section 2"><a name="Section2">
-                                <p id="Area 2">Lorem ipsum...</p>
-                            </div></a>
-                            <a name="Section3"><div id="Section 3">
-                                <p id="Area 3">Lorem ipsum...</p>
-                            </div></a>
-                            <a name="Section4"><div id="Section 4">
-                                <p id="Area 4">Lorem ipsum...</p>    
-                            </div></a>
-                            <a name="Section5"><div id="Section 5">
-                                <p id="Area 5">Lorem ipsum...</p>    
-                            </div></a>
+                            <div id="Section 1">
+                                 <h1 id="Sec1"><a name="Section1">Section 1</a></h1>
+                                 <p id="Area 1">Lorem ipsum.</p>     
+                            </div>
+                            <div id="Section 2">
+                                <h1 id="Sec2"><a name="Section2">Section 2</a></h1>
+                                <p id="Area2">Lorem ipsum.</p>
+                            </div>
+                            <div id="Section 3">
+                                <h1 id="Sec3"><a name="Section3">Section 3</a></h1>    
+                                <p id="Area3">Lorem ipsum.</p>
+                            </div>
+                            <div id="Section 4">
+                                <h1 id="Sec4"><a name="Section4">Section 4</a></h1>    
+                                <p id="Area4">Lorem ipsum.</p>    
+                            </div>
+                            <div id="Section 5">
+                                <h1 id="Sec5"><a name="Section5">Section 5</a></h1>     
+                                <p id="Area5">Lorem ipsum.</p>    
+                            </div>
 			</div>
 			<div id="sidebar">
 			</div>
