--- a/Authentication.html
+++ b/Authentication.html
@@ -16,21 +16,23 @@ and open the template in the editor.
             <div class="nav">
             <table align="center">
                <thead>
-                  <th colspan ="6">Sections</th>
                </thead>
                <tbody>
                   <tr>
-                     <td><a href="http://matesartchemistry.net23.net/index.html">Introduction</a></td>
-                     <td><a href="http://matesartchemistry.net23.net/Caring_For_Your_Paintings.html">Caring For Your Paintings</a></td>
-                     <td><a href="http://matesartchemistry.net23.net/Analysis.html">Analysis</a></td>
-                     <td><a href="http://matesartchemistry.net23.net/Authentication.html">Authentication</a></td>
-                     <td><a href="http://matesartchemistry.net23.net/Animal_Infestations.html.html">Animal Infestations</a></td>
-                     <td><a href="http://matesartchemistry.net23.net/Bibliography.html">Bibliography</a></td>
+                     <td><a href="index.html">Introduction</a></td>
+                     <td><a href="Restoration.html">Restoration</a></td>
+                     <td><a href="Caring_For_Your_Paintings.html">Caring For Your Paintings</a></td>
+                     <td><a href="Analysis.html">Analysis</a></td>
+                     <td><a href="Authentication.html">Authentication</a></td>
+                     <td><a href="Infestations.html">Infestations</a></td>
+                     <td><a href="Pigments.html">Pigments</a></td>
+                     <td><a href="Glossary.html">Glossary</a></td>
+                     <td><a href="Bibliography.html">Bibliography</a></td>
                   </tr>
                </tbody>
            </table>
 	</div>
-	<div class="Header" style="text-align:center">Authentication</div>
+            <div class="Header" style="text-align:center"><h1>Authentication</h1></div>
         <div class="Body">
             
         </div>
