--- a/Bibliography.html
+++ b/Bibliography.html
@@ -16,32 +16,36 @@ and open the template in the editor.
             <div class="nav">
             <table align="center">
                <thead>
-                  <th colspan ="6">Sections</th>
                </thead>
                <tbody>
                   <tr>
-                     <td><a href="http://matesartchemistry.net23.net/index.html">Introduction</a></td>
-                     <td><a href="http://matesartchemistry.net23.net/Caring_For_Your_Paintings.html">Caring For Your Paintings</a></td>
-                     <td><a href="http://matesartchemistry.net23.net/Analysis.html">Analysis</a></td>
-                     <td><a href="http://matesartchemistry.net23.net/Authentication.html">Authentication</a></td>
-                     <td><a href="http://matesartchemistry.net23.net/Animal_Infestations.html.html">Animal Infestations</a></td>
-                     <td><a href="http://matesartchemistry.net23.net/Bibliography.html">Bibliography</a></td>
+                     <td><a href="index.html">Introduction</a></td>
+                     <td><a href="Restoration.html">Restoration</a></td>
+                     <td><a href="Caring_For_Your_Paintings.html">Caring For Your Paintings</a></td>
+                     <td><a href="Analysis.html">Analysis</a></td>
+                     <td><a href="Authentication.html">Authentication</a></td>
+                     <td><a href="Infestations.html">Infestations</a></td>
+                     <td><a href="Pigments.html">Pigments</a></td>
+                     <td><a href="Glossary.html">Glossary</a></td>
+                     <td><a href="Bibliography.html">Bibliography</a></td>
                   </tr>
                </tbody>
            </table>
 	</div>
-	<div class="Header" style="text-align:center">Bibliography</div>
+            <div class="Header" style="text-align:center"><h1>Bibliography</h1></div>
         <div class="Body">
         <ol>
-            <li><a name="Work1">"Paintings." Caring for Your Treasures. American Institute for Conservation of Historic and Artistic Works, 2013. Web. 09 Feb. 2014.</a></li>
-            <li><a name="Work2">Bockrath, Mark F. "Paintings." The Winterthur Guide to Caring for Your Collection. Winterthur: Henry Francis Du Pont Winterthur Museum, 2000. 115-24. Print.</a></li>
+            <li><a name="Work1">'Paintings.' Caring for Your Treasures. American Institute for Conservation of Historic and Artistic Works, 2013. Web. 09 Feb. 2014.</a></li>
+            <li><a name="Work2">Bockrath, Mark F. 'Paintings.' The Winterthur Guide to Caring for Your Collection. Winterthur: Henry Francis Du Pont Winterthur Museum, 2000. 115-24. Print.</a></li>
             <li><a name="Work3">Batchelor, Elizabeth, Kathleen Mulvaney-Buente, and G. T. Nightwine. Art Conservation: The Race Against Destruction. Cincinnati, OH: Cincinnati Art Museum, 1978. Print.</a></li>
-            <li><a name="Work4">"Raking Light." Glossary. The National Gallery, n.d. Web. 15 Feb. 2014.</a></li>
-            <li><a name="Work5">"Varnish." Glossary. The National Gallery, n.d. Web. 15 Feb. 2014.</a></li>
+            <li><a name="Work4">'Raking Light.' Glossary. The National Gallery, n.d. Web. 15 Feb. 2014.</a></li>
+            <li><a name="Work5">'Varnish.' Glossary. The National Gallery, n.d. Web. 15 Feb. 2014.</a></li>
             <li><a name="Work6">Pinna, Daniela, Monica Galeotti, and Rocco Mazzeo, eds. Scientific Examination for the Investigation of Paintings. A Handbook for Conservator-restorers. Firenze, Italy: Centro Di Della Edifirmi, 2009. Print.</a></li>
-            <li><a name="Work7">"The History of Pigments." Winsor & Newton. Winsor & Newton, 2011. Web. 01 Mar. 2014.</a></li>
+            <li><a name="Work7">'The History of Pigments.' Winsor & Newton. Winsor & Newton, 2011. Web. 01 Mar. 2014.</a></li>
             <li><a name="Work8">W.G. Constable, ed., et al. Manual on the Conservation of Paintings. London: Archetype Publications, 1997. Print.</a></li>
-            <li><a name="Work9">"Chromatography." Merriam-Webster.com. Merriam-Webster, n.d. Web. 1 Mar. 2014.</a></li>
+            <li><a name="Work9">'Chromatography.' Merriam-Webster.com. Merriam-Webster, n.d. Web. 1 Mar. 2014.</a></li>
+            <li><a name="Work10">Fetchey, Fiona. 'K-12.' Waikato Radiocarbon Dating Laboratory. University of Waikato, n.d. Web. 04 Apr. 2014.</a></li>
+            <li><a name="Work11">'Restoring Oil Paintings.' Picture Restoration Scotland. Simon Blackwood Fine Arts, n.d. Web. 13 Apr. 2014.</a></li>
        </ol>
        </div>
     </body>
